--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,4 +1,8 @@
 // Here we import the old file, but any new styles can be added directly to 
 // this file below
 
-@use 'legacy/_main';
+// First set some Bootstrap variables
+
+@import 'lib/bootstrap/bootstrap';
+
+@import 'legacy/main';
