Add landmarks to templates
Pages didn't have a main landmark, and others were labelled
incorrectly or unclearly.

This:
- Adds a main landmark - with a way to override it if you want to place
  it elsewhere
- Labels all "navigation" landmarks
- Swaps the footer to a "contentinfo"

--- a/course/templates/course/_course_menu.html
+++ b/course/templates/course/_course_menu.html
@@ -17,7 +17,7 @@
 <li role="presentation" class="header">
 	<div class="row">
     <div class="col-sm-10">
-			<h4>{% trans "Course" %}</h4>
+			<h4 id="course-menu-heading">{% trans "Course" %}</h4>
     </div>
     <div class="col-sm">
 			<div class="dropdown h4">
@@ -41,7 +41,7 @@
 </li>
 {% else %}
 <li role="presentation" class="header">
-	<h4>{% trans "Course" %}</h4>
+	<h4 id="course-menu-heading">{% trans "Course" %}</h4>
 </li>
 {% endif %}
 
