Add notification to past course instances
- An automatic notification has been added for the course
instances that have already passed and in which enrolling has
already ended.
- If there is a later course instance available for that page
visitor, they will be shown a link to that instance on the course
front page.

Fixes: https://github.com/apluslms/a-plus/issues/554

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -75,6 +75,21 @@ table.src tr td.src {
     outline: 3px solid #ffdd00 !important;
 }
 
+/* alerts */
+.sticky-alert {
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
+    overflow: hidden;
+    z-index: 100;
+}
+
+.alert-default {
+    background-color: #fff;
+    color: #333;
+    border: 2px solid #333;
+    font-weight: bold;
+}
 
 /* site footer */
 html, body {
