--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -65,6 +65,7 @@ $font-size-base:  $aplus-font-size-base;
 @import 'components/frontpage-cards';
 @import 'components/menu-notification';
 @import 'components/new-tab-links';
+@import 'components/news';
 @import 'components/overlay';
 @import 'components/pagination';
 @import 'pages/login';
