Improve sitemaps with dynamic priorities
* Old courses have a smaller priority than current courses.
* Add a new base class for sitemaps: `class AplusSitemap`.
  It differentiates the priorities of recent and outdated objects.
* Change some of the priority values that had been used.
  Give chapters the highest priority.
* Remove anchor URLs from the sitemap because sitemaps disallow
  the anchor part (for example, embedded exercises with
  `#chapter-exercise-1`).
* No duplicate URLs in the sitemap.
* For embedded exercises under chapters, add the `noindex` meta tag
  on the full-view exercise page so that it is not indexed.
  Only the chapter page should be indexed since students use
  the chapter view.

Fixes #975

--- a/templates/base.html
+++ b/templates/base.html
@@ -66,6 +66,10 @@
 	{# Put all additional scripts inside this block. #}
 	{% endblock %}
 
+	{% block meta %}
+	{# Put all additional meta data inside this block. #}
+	{% endblock %}
+
 	<!-- Some favicons courtesy of http://realfavicongenerator.net/ -->
 	<link rel="apple-touch-icon" sizes="57x57" href="{{ STATIC_URL }}favicons/apple-touch-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="{{ STATIC_URL }}favicons/apple-touch-icon-114x114.png">
