--- a/exercise/templates/exercise/exercise_base.html
+++ b/exercise/templates/exercise/exercise_base.html
@@ -30,6 +30,12 @@
 {% endblock %}
 {% endblock %}
 
+{% block meta %}
+{% if exercise.parent and exercise.status == exercise.STATUS.UNLISTED %}
+<meta name="robots" content="noindex">
+{% endif %}
+{% endblock %}
+
 {% block columns %}
 <div class="{% if exercise.use_wide_column %}col-lg-12{% else %}col-lg-9{% endif %} exercise-column">
 
