--- a/exercise/templates/exercise/exercise.html
+++ b/exercise/templates/exercise/exercise.html
@@ -74,6 +74,7 @@
 <script src="{% static 'exercise/group.js' %}"></script>
 <script src="{% static 'exercise/autosave.js' %}"></script>
 <script src="{% static 'exercise/chapter.js' %}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.19.0/js/md5.min.js"></script>
 <script
     src="{% static 'exercise/language_link.js' %}"
     data-set-lang="{{ instance|url:'set-enrollment-language' }}"></script>
